# RT-DETR

./: .dockerignore  .flake8  .gitignore  README.md  README_cn.md  benchmark_onnx.py  benchmark_onnx.sh  create_symlink.sh  create_venv.sh  dev_requirements.txt  docker-compose.yaml  docker-compose.yml  hubconf.py  local.env  onnx_export.sh  speed_test_rtdetr_r18vd_6x_coco.yml.csv  speed_test_rtdetr_r34vd_6x_coco.yml.csv  speed_test_rtdetr_r50vd_6x_coco.yml.csv  test_output.json  test_output_high_thresh.json  test_output_low_thresh.json  todo
rtdetrv2_pytorch/: Dockerfile  README-aerovect.md  README.md  README_CONVERSION.md  README_TRAINING.md  docker-compose.yml  monitor_training.sh  pyproject.toml  requirements.txt  train_dinov3_deeppcb.sh  train_dinov3_single_gpu.sh  train_dinov3_visdrone.sh  validate_coco.py  yolo_to_coco.py
rtdetrv2_pytorch/configs/: runtime.yml
rtdetrv2_pytorch/configs/custom/: DATASET.md  rtdetrv2_r18vd_traco6.yml
rtdetrv2_pytorch/configs/dataset/: aerovect_detection.yml  coco_detection.yml  cow_detection.yml  deeppcb.yml  gr_detection.yml  pku_market_pcb.yml  visdrone.yml  voc_detection.yml
rtdetrv2_pytorch/configs/gr/: rtdetrv2_r18vd_10e_gr.yml  rtdetrv2_r18vd_50e_gr_overfit.yml
rtdetrv2_pytorch/configs/rtdetr/: readme.md  rtdetr_r101vd_6x_coco.yml  rtdetr_r18vd_6x_coco.yml  (+3 more)
rtdetrv2_pytorch/dataset/: readme.md
rtdetrv2_pytorch/rtdetrv2/: __init__.py
rtdetrv2_pytorch/tools/: README.md  export_onnx.py  export_trt.py  infer.py  infer_batch.py  memory_check.py  onnx2trt.sh  predict_onnx.py  predict_torch.py  run_profile.py  train.py
(+353 files in other folders)
